tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/control/bare-formfeed.stderr
TOML parse error at line 1, column 17
  |
1 | bare-formfeed = 
  |                 ^
invalid string
expected `"`, `'`
